--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>weather</title>
 
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./media.css" />
 
 </head>
 <body>
@@ -23,8 +24,6 @@
           </div>
           <div class="cloud_1 c_shadow">
             <ul>
-              <li></li>
-              <li></li>
               <li></li>
               <li></li>
             </ul>
